MODON MRE BPDEV/force-app/main/default/objects/sendXiboconfig__mdt/sendXiboconfig__mdt.object-meta.xml
<CustomObject>
    <label>sendXiboconfig</label>
    <pluralLabel>sendXiboconfigs</pluralLabel>
</CustomObject>