MODON MRE BPDEV/force-app/main/default/objects/sendXiboconfig__mdt/fields/CollectionId__c.field-meta.xml
<CustomField>
    <fullName>CollectionId__c</fullName>
    <label>CollectionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>