MODON MRE BPDEV/force-app/main/default/objects/sendXiboconfig__mdt/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>ProcessType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>