MODON MRE BPDEV/force-app/main/default/objects/sendXiboconfig__mdt/fields/RecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDevName__c</fullName>
    <label>RecordTypeDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>