MODON MRE BPDEV/force-app/main/default/objects/sendXiboconfig__mdt/fields/SandboxUrl__c.field-meta.xml
<CustomField>
    <fullName>SandboxUrl__c</fullName>
    <label>SandboxUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>